Entries from kGpuDriverBugListJson are not selected on OS_WIN when relying on gl_renderer

For example the current entry id 51 from kGpuDriverBugListJson,
is never selected on Windows because gpu::ApplyGpuDriverBugWorkarounds
(from gpu_main.cc) is currently not called on Windows.
It is only called on chromeos, android and linux. On osx no problem since
no entry id relies on gl_renderer.

This CL also adds DriverBugWorkaroundsUponGLRendererPage to gpu_process_test.py

Also this CL adds a new base class DriverBugWorkaroundsTestsPage to factor
some common code.

R=kbr@chromium.org, piman@chromium.org, zmo@chromium.org

BUG=600741

TEST=./content/test/gpu/run_gpu_test.py gpu_process
CQ_INCLUDE_TRYBOTS=tryserver.chromium.win:win_optional_gpu_tests_rel;tryserver.chromium.mac:mac_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/1860823004
Cr-Commit-Position: refs/heads/master@{#390310}

Former-commit-id: fecf94b1e7ce2e6ab0e89a0a7aefd1a1771f94c1